--- a/Module 1/Boot Strap Project/styles.css
+++ b/Module 1/Boot Strap Project/styles.css
@@ -1,16 +1,21 @@
 
 body {
+  box-sizing: border-box;
+
   margin: 0px;
   font-family: montserrat, sans-serif;
 }
 /* for all div class, give a black border */
 div {
+  box-sizing: border-box;
   border: 2px solid gray;
   padding: 1rem;
   margin: 1rem;
 }
 
 .blue-card {
+  box-sizing: border-box;
+
   padding: 1rem;
   background-color: #33b5e5;
   border: 2px solid white;
@@ -29,6 +34,8 @@ div {
 }
 
 .review-card {
+  box-sizing: border-box;
+
   padding: 1rem;
   background-color: hsl(0, 100%, 71%);
   border: 2px solid white;
@@ -67,4 +74,9 @@ div {
 .featured {
     background-color:rgb(42, 42, 42);
     color: white;
+}
+
+
+.option-card{
+  width: 500px;
 }
