--- a/Internship/Components/horizontal-drawer/src/components/RenderCards.css
+++ b/Internship/Components/horizontal-drawer/src/components/RenderCards.css
@@ -4,12 +4,11 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   width: 100%;
-  height: 98vh; /* Ensure it takes full height OR use 100vh*/
+  height: 98vh; /* Ensure it takes full height OR use 100vh */
   overflow: hidden; /* Prevent overflow */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
   margin: 0; /* Remove any margin */
 }
-
 
 .card-render {
   display: flex;
@@ -51,7 +50,6 @@
 
 .detail-container {
   margin-top: 0.8%;
-
   height: 96%; 
   position: absolute;
   top: 0;
@@ -59,4 +57,18 @@
   background-color: aqua;
   overflow-y: auto; /* Make the container scrollable */
   box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
+}
+
+.vertical-card-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+  color: rgb(255, 255, 255);
+  font-family: Monaco, monospace;
+  text-align: center;
+  font-size: 9vh;
+  font-weight: bold;
+  text-shadow: 0px 0px 0.2em rgba(0, 0, 0, 1);
+  white-space: nowrap; /* Prevent text from wrapping */
 }
