--- a/Internship/Components/NextJS/horizontal-drawer/app/components/RenderCards.css
+++ b/Internship/Components/NextJS/horizontal-drawer/app/components/RenderCards.css
@@ -1,14 +1,15 @@
 /* This contains all the cards */
 .cards-container {
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    width: 100%;
-    height: 98vh; /* Ensure it takes full height OR use 100vh */
-    overflow: hidden; /* Prevent overflow */
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
-    margin: 0; /* Remove any margin */
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin: 0;
+  position: relative; /* Add this */
+}
   
   .card-render {
     display: flex;
@@ -26,7 +27,7 @@
     display: block;
     overflow: hidden;
     width: calc(100% / var(--number-of-cards)); /* Ensure no extra spacing */
-    height: 99%;
+    height: 98%;
     transition: transform 0.7s ease, filter 0.3s ease; /* Ensure filter transition is included */
     border: 0.3em solid rgb(0, 0, 0);
     cursor: pointer;
@@ -37,7 +38,7 @@
   }
   
   .vertical-card:hover .vertical-card-image {
-    transform: scale(1.05);
+    transform: scale(1.10);
   }
   
   .vertical-card-image {
@@ -49,14 +50,15 @@
   }
   
   .detail-container {
-    margin-top: 0.8%;
-    height: 96%; 
+    margin-top: 1vh;
+    height: 97.5%; /* Change height to 100% */
     position: absolute;
     top: 0;
     right: 0;
     background-color: aqua;
-    overflow-y: auto; /* Make the container scrollable */
-    box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
+    overflow-y: auto;
+    box-sizing: border-box;
+    width: calc(100% - 0.5em);
   }
   
   .vertical-card-text {
@@ -67,9 +69,8 @@
     color: rgb(255, 255, 255);
     font-family: Monaco, monospace;
     text-align: center;
-    font-size: 9vh;
+    font-size: 8vh;
     font-weight: bold;
     text-shadow: 0px 0px 0.2em rgba(0, 0, 0, 1);
     white-space: nowrap; /* Prevent text from wrapping */
-  }
-  
+}
