--- a/Internship/Components/NextJS/horizontal-drawer/app/horizontal-drawer/styling.css
+++ b/Internship/Components/NextJS/horizontal-drawer/app/horizontal-drawer/styling.css
@@ -6,9 +6,13 @@ body, html, #root {
     align-items: center;
   }
 
+
+  h1{
+    color:white;
+  }
   .cardContainer{
-    background-color: rgb(206, 33, 241);
-    padding: 3%;
+    background-color: rgb(0, 0, 0);
+    /* padding: 3%; */
     /* margin-top: 10em; */
     /* overflow-y:scroll; */
   }
