--- a/Internship/Components/NextJS/horizontal-drawer/app/horizontal-drawer/styling.css
+++ b/Internship/Components/NextJS/horizontal-drawer/app/horizontal-drawer/styling.css
@@ -1,6 +1,7 @@
 body, html, #root {
     background-color: black;
     margin: 0;
+    /* padding:100px; */
     display: flex;
     justify-content: center;
     align-items: center;
